--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,85 @@
 body {
-    background: #085078; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #085078, #85d8ce); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #085078, #85d8ce);
-    color: #fff;
+  background: #000;
+  color: white;
 }
 
 .banner {
-    text-align: center;
-    font-weight: bold;
-    font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .board {
-    width: 300px;
-    margin: 50px auto 0;
-    display: grid;
-    border: 3px solid #000;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+  width: 300px;
+  margin: 50px auto 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 .square {
-    width: 100px;
-    height: 100px;
-    border: 3px solid #000;
-    box-sizing: border-box;
-    font-size: 4rem;
-    text-align: center;
+  width: 100px;
+  height: 100px;
+  border: 3px solid #fff;
+  box-sizing: border-box;
+  font-size: 4rem;
+  text-align: center;
+}
+
+.square:nth-of-type(1) {
+  border-top: none;
+  border-left: none;
+}
+.square:nth-of-type(2) {
+  border-top: none;
+}
+.square:nth-of-type(3) {
+  border-top: none;
+  border-right: none;
+}
+.square:nth-of-type(4) {
+  border-left: none;
+}
+.square:nth-of-type(6) {
+  border-right: none;
+}
+.square:nth-of-type(7) {
+  border-bottom: none;
+  border-left: none;
+}
+.square:nth-of-type(8) {
+  border-bottom: none;
+}
+.square:nth-of-type(9) {
+  border-bottom: none;
+  border-right: none;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.items {
+  border: #000;
+  background: #18bc9c;
+  color: #fff;
+  border-radius: 10px;
+  padding: 15px;
+  margin: 10px;
+  font-weight: bolder;
+  cursor: pointer;
+  user-select: none;
+}
+.items:hover{
+  transform: scale(1.03);
+}
+.items:active {
+  transform: scale(0.98);
+}
+
+.disabled {
+  background: grey;
+  cursor: not-allowed;
 }
